--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "widgetVersion": "3.x",
   "description": "This is a plugin for CKEditor 4 to work with Uploadcare.",
   "scripts": {
+    "clean": "rimraf dist",
     "dev": "rollup -c -w",
     "lint": "eslint src/",
     "precommit": "npm run lint",
     "serve": "serve",
     "deploy:demo": "node scripts/deploy-demo.js",
     "deploy:release": "node scripts/deploy-release.js",
-    "build": "rimraf dist && rollup -c && npm run assets",
+    "build": "npm run clean && rollup -c && npm run assets",
     "release": "release-it",
     "assets": "cd dist && find . -type d -maxdepth 1 -mindepth 1 -exec zip -D -r {}.zip {} \\; -exec tar -czvf {}.tar.gz {} \\;"
   },
