--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uploadcare-ckeditor",
   "version": "2.1.5",
   "widgetVersion": "3.x",
-  "description": "This is a plugin for CKEditor 4 to work with Uploadcare.",
+  "description": "File Uploader by Uploadcare. The plugin for CKEditor 4 to work with Uploadcare Widget.",
   "scripts": {
     "clean": "rimraf dist",
     "dev": "rollup -c -w",
