--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/uploadcare/uploadcare-ckeditor#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
     "archiver": "^4.0.1",
+    "browser-sync": "^2.26.7",
     "eslint": "^7.0.0",
     "eslint-config-uploadcare": "^1.3.0",
     "gh-pages": "^2.2.0",
@@ -36,9 +36,11 @@
     "release-it": "^13.6.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.10.2",
-    "rollup-plugin-cp": "^0.1.3",
     "rollup-plugin-jscc": "^1.0.0",
     "rollup-plugin-license": "^2.0.0",
     "serve": "^11.3.0"
+  },
+  "dependencies": {
+    "rollup-plugin-copy": "^3.3.0"
   }
 }
